# AutonomousCodeConversionSystem

./: .env  README.md  Regras.md  api_cpp.md  estudo.md  hello.py  projectplan.md  pyproject.toml
src/autonomous_code_converter/: __init__.py
src/autonomous_code_converter/agents/: __init__.py  dependency_extraction_agent.py  language_detection_agent.py
src/autonomous_code_converter/graphs/: __init__.py  base_graph.py
src/autonomous_code_converter/models/: __init__.py  base_models.py  config.py
src/autonomous_code_converter/tools/: __init__.py  openrouter_client.py
tests/: __init__.py
tests/integration/: __init__.py  test_openrouter_connection.py
tests/unit/: __init__.py  test_base_graph.py  test_dependency_extraction_agent.py  test_language_detection_agent.py  test_models.py  test_openrouter.py
